[package]
name = "libbismuth"
version = "1.0.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/tau-OS/rust"
description = "Rust bindings for libbismuth"
license = "MIT"
repository = "https://github.com/tau-OS/rust"
documentation = "https://docs.developers.tauos.co/rust/libbismuth/"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]

[lib]
name = "libbismuth"

[features]
dox = [
    "glib/dox",
    "gio/dox",
    "gdk-pixbuf/dox",
    "pango/dox",
    "gdk/dox",
    "gtk/dox",
    "ffi/dox",
]
gtk_v4_2 = []
gtk_v4_4 = ["gtk_v4_2"]
gtk_v4_6 = ["gtk_v4_4"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
bitflags = '1.0'
libc = '0.2'
once_cell = "1.8"
futures-channel = "0.3"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18.0"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18.0"

[dependencies.gdk-pixbuf]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18.0"

[dependencies.pango]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18.0"

[dependencies.gdk]
package = "gdk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.0"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.0"

[dependencies.ffi]
package = "libbismuth-sys"
path = './sys'
version = "1.0.0"
