[package]
name = "libbismuth"
version = "0.4.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
readme = "../README.md"
homepage = "https://github.com/tau-OS/rust"
description = "Rust bindings for libbismuth"
license = "MIT"
repository = "https://github.com/tau-OS/rust"
documentation = "https://docs.developers.tauos.co/rust/libbismuth/"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]

[lib]
name = "libbismuth"

[features]
gtk_v4_2 = []
gtk_v4_4 = ["gtk_v4_2"]
gtk_v4_6 = ["gtk_v4_4"]
gtk_v4_8 = ["gtk_v4_6"]
gtk_v4_10 = ["gtk_v4_8"]
gtk_v4_12 = ["gtk_v4_10"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = '2.4.0'
libc = '0.2'
once_cell = "1.8"
futures-channel = "0.3"

[dependencies.glib]
version = "0.19"

[dependencies.gio]
version = "0.19"

[dependencies.gdk-pixbuf]
version = "0.19"

[dependencies.pango]
version = "0.19"

[dependencies.gdk]
package = "gdk4"
version = "0.8"

[dependencies.gtk]
package = "gtk4"
version = "0.8"

[dependencies.ffi]
package = "libbismuth-sys"
path = './sys'
version = "0.4.0"
