[package]
name = "libhelium"
version = "0.12.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
readme = "../README.md"
homepage = "https://docs.developers.tauos.co/rust/libhelium/"
description = "Rust bindings for libhelium"
license = "MIT"
repository = "https://github.com/tau-OS/rust"
documentation = "https://github.com/tau-OS/rust"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]

[lib]
name = "libhelium"

[features]
gtk_v4_2 = []
gtk_v4_4 = ["gtk_v4_2"]
gtk_v4_6 = ["gtk_v4_4"]
gtk_v4_8 = ["gtk_v4_6"]
gtk_v4_10 = ["gtk_v4_8"]
gtk_v4_12 = ["gtk_v4_10"]
gio_v2_80 = ["gio/v2_80"]
v1_1 = ["ffi/v1_1"]
v1_2 = ["v1_1", "ffi/v1_2"]
v1_3 = ["v1_2", "ffi/v1_3"]
v1_4 = ["v1_3", "ffi/v1_4"]
v1_5 = ["v1_4", "ffi/v1_5"]
v1_6 = ["v1_5", "ffi/v1_6"]
v1_7 = ["v1_6", "ffi/v1_7"]
v1_8 = ["v1_7", "ffi/v1_8"]

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = '2.4.0'
libc = '0.2'
once_cell = "1.8"
futures-channel = "0.3"

[dependencies.glib]
version = "0.20"

[dependencies.gio]
version = "0.20"

[dependencies.gdk-pixbuf]
version = "0.20"

[dependencies.pango]
version = "0.20"

[dependencies.gdk]
package = "gdk4"
version = "0.9"

[dependencies.gtk]
package = "gtk4"
version = "0.9"

[dependencies.ffi]
package = "libhelium-sys"
path = './sys'
version = "0.12.0"
