[package]
name = "fusebox-sys"
version = "0.5.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
build = "build.rs"
links = "fusebox-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]
description = "FFI bindings for fusebox"
license = "MIT"
homepage = "https://github.com/tau-OS/rust"
repository = "https://github.com/tau-OS/rust"
documentation = "https://docs.developers.tauos.co/rust/fusebox_sys/"

[package.metadata.system-deps.fusebox_1]
name = "fusebox-1"
version = "1"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "fusebox_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[dependencies.gtk-sys]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.10"
branch = "master"

[dependencies.gdk-sys]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.10"
branch = "master"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
