[package]
name = "fusebox-sys"
version = "0.5.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
build = "build.rs"
links = "fusebox-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]
description = "FFI bindings for fusebox"
license = "MIT"
homepage = "https://github.com/tau-OS/rust"
repository = "https://github.com/tau-OS/rust"
documentation = "https://docs.developers.tauos.co/rust/fusebox_sys/"

[package.metadata.system-deps.fusebox_1]
name = "fusebox-1"
version = "1"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "fusebox_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
version = "0.20"

[dependencies.glib-sys]
version = "0.20"

[dependencies.gobject-sys]
version = "0.20"

[dependencies.gtk-sys]
package = "gtk4-sys"
version = "0.9"

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.9"

[dependencies.pango-sys]
version = "0.20"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
