[package]
name = "libbismuth-sys"
version = "0.5.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
build = "build.rs"
links = "libbismuth-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]
description = "FFI bindings for libbismuth"
license = "MIT"
homepage = "https://github.com/tau-OS/rust"
repository = "https://github.com/tau-OS/rust"
documentation = "https://docs.developers.tauos.co/rust/libbismuth_sys/"

[package.metadata.system-deps.libbismuth_1]
name = "libbismuth-1"
version = "1"

[package.metadata.system-deps.libbismuth_1.v1_2]
version = "1.2"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "libbismuth_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[dependencies.gtk-sys]
package = "gtk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.10"
branch = "master"

[dependencies.gdk-sys]
package = "gdk4-sys"
git = "https://github.com/gtk-rs/gtk4-rs"
version = "0.10"
branch = "master"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.21"
branch = "master"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_2 = []
