[package]
name = "libhelium-sys"
version = "0.9.0"
authors = ["Lleyton Gray <lleyton@fyralabs.com>"]
edition = "2021"
build = "build.rs"
links = "libhelium-1"
categories = ["api-bindings", "gui"]
keywords = ["gtk4-rs", "tauos", "GUI"]
description = "FFI bindings for libhelium"
license = "MIT"
homepage = "https://github.com/tau-OS/rust"
repository = "https://github.com/tau-OS/rust"
documentation = "https://docs.developers.tauos.co/rust/libhelium_sys/"

[package.metadata.system-deps.libhelium_1]
name = "libhelium-1"
version = "1"

[package.metadata.system-deps.libhelium_1.v1_1]
version = "1.1"

[package.metadata.system-deps.libhelium_1.v1_2]
version = "1.2"

[package.metadata.system-deps.libhelium_1.v1_3]
version = "1.3"

[package.metadata.system-deps.libhelium_1.v1_4]
version = "1.4"

[package.metadata.system-deps.libhelium_1.v1_5]
version = "1.5"

[package.metadata.system-deps.libhelium_1.v1_6]
version = "1.6"

[package.metadata.system-deps.libhelium_1.v1_7]
version = "1.7"

[package.metadata.system-deps.libhelium_1.v1_8]
version = "1.8"

[package.metadata.docs.rs]
features = []
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[lib]
name = "libhelium_sys"

[dependencies]
libc = "0.2"

[dependencies.gio-sys]
version = "0.20"

[dependencies.glib-sys]
version = "0.20"

[dependencies.gobject-sys]
version = "0.20"

[dependencies.gtk-sys]
package = "gtk4-sys"
version = "0.9"

[dependencies.gdk-sys]
package = "gdk4-sys"
version = "0.9"

[dependencies.pango-sys]
version = "0.20"

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v1_1 = []
v1_2 = ["v1_1"]
v1_3 = ["v1_2"]
v1_4 = ["v1_3"]
v1_5 = ["v1_4"]
v1_6 = ["v1_5"]
v1_7 = ["v1_6"]
v1_8 = ["v1_7"]
